<resources>
    <string name="app_name">BookReview</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_pw">forgot password ?</string>
    <string name="btn_login">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_meta">Continue with Meta</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_to_start_using_the_app">Register to start using the app!</string>
    <string name="btn_register">Register</string>
    <string name="register_subtitle">
        <font color="black"><b>Register</b></font>
        to get
    </string>
    <string name="register_have_account">Already have an account? <font color="#2079FE"><b>Login</b></font>
    </string>
    <string name="login_havent_account">
        I don\'t have an account <font color="#2079FE"><b>Sign up</b></font>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_second_icon">SecondIcon</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>